--- a/4_permutation_test/src/map_results.Rmd
+++ b/4_permutation_test/src/map_results.Rmd
@@ -21,11 +21,55 @@ shuffled <- read.csv('4_permutation_test/data/shuffled_maximum.csv')
 ```
 
 ```{r}
+## Compute stats
+
 # Number of permutations 
 permutations <- 500
 
 # Get coordinates for electrodes on map
 coordinates <- get_layout()
+```
+
+####Overall tracking
+
+```{r}
+shuffled_means <- aggregate(shuffled[,4:131], by=list(Category=shuffled$shuffle_number), FUN=mean)
+original_means <- as.data.frame(t(apply(as.matrix(original[,3:131]), MARGIN = 2, mean)))
+overall_proportions <- get_proportions_overall(shuffled_means, original_means)
+overall_df <- data.frame(overall_proportions, coordinates)
+
+# Map
+ggplot() +
+  geom_point(data = overall_df, aes(x = x, y = y, 
+                                    size = 1/proportions, 
+                                    # colour = "#B8DE29FF",
+                                    alpha = 0.5,
+                                    stroke = 0)) +
+  geom_point(data = overall_df, aes(x = x, y = y, 
+                                    size = 1,
+                                    alpha = 0.5,
+                                    stroke = 0)) + 
+  scale_size_continuous(name = "p", breaks = c(20, 100, 200), labels = c("0.05", "0.01", "0.005")) +
+  guides(alpha = FALSE) +
+  ylim(0, 900) +
+  xlim(0, 900) +
+  annotate("text", x=20, y=5, label= "L", alpha = 0.8) +
+  annotate("text", x=880, y=5, label= "R", alpha = 0.8) +
+  theme(axis.line=element_blank(),axis.text.x=element_blank(),
+        axis.text.y=element_blank(),axis.ticks=element_blank(),
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        panel.background=element_blank(),
+        panel.border=element_blank(),
+        panel.grid.major=element_blank(),
+        panel.grid.minor=element_blank(),
+        plot.background=element_blank())
+```
+
+####Tracking for each condition
+
+```{r}
+##Compute stats
 
 # Compute significance of tracking each level for each channel
 levels <- get_all_channel_proportions(shuffled, original)
@@ -33,6 +77,7 @@ levels <- get_all_channel_proportions(shuffled, original)
 # Compute significance of difference between levels in each condition for each channel
 level_differences <- get_all_channel_proportions_differences(shuffled, original)
 ```
+
 
 ```{r}
 get_map <- function(df, levels_label) {
