--- a/4_permutation_test/src/map_results.Rmd
+++ b/4_permutation_test/src/map_results.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE)
-knitr::opts_knit$set(root.dir = "/Users/letitiaho/src/talker_change_data_processing")
+knitr::opts_knit$set(root.dir = "/Users/letitiaho/src/talker_change_data_processing/4_permutation_test/")
 library("dplyr")
 library("ggplot2")
 library("ggpubr")
@@ -15,9 +15,10 @@ library("kableExtra")
 ```
 
 ```{r load_data, include=FALSE}
-source("tools/functions.R")
-original <- read.csv('4_permutation_test/data/original_maximum.csv')
-shuffled <- read.csv('4_permutation_test/data/shuffled_maximum.csv')
+# Load data
+source("../tools/functions.R")
+original <- read.csv('data/original_maximum.csv')
+shuffled <- read.csv('data/shuffled_maximum.csv')
 ```
 
 ```{r}
@@ -39,10 +40,9 @@ overall_proportions <- get_proportions_overall(shuffled_means, original_means)
 overall_df <- data.frame(overall_proportions, coordinates)
 
 # Map
-ggplot() +
+plot <- ggplot() +
   geom_point(data = overall_df, aes(x = x, y = y, 
                                     size = 1/proportions, 
-                                    # colour = "#B8DE29FF",
                                     alpha = 0.5,
                                     stroke = 0)) +
   geom_point(data = overall_df, aes(x = x, y = y, 
@@ -64,6 +64,8 @@ ggplot() +
         panel.grid.major=element_blank(),
         panel.grid.minor=element_blank(),
         plot.background=element_blank())
+plot
+# ggsave(plot = plot, filename = 'figs/overall.png', width = 6, height = 6)
 ```
 
 ####Tracking for each condition
@@ -76,11 +78,28 @@ levels <- get_all_channel_proportions(shuffled, original)
 
 # Compute significance of difference between levels in each condition for each channel
 level_differences <- get_all_channel_proportions_differences(shuffled, original)
+
+# Get list of channels
+channels <- 1:128
 ```
 
 
 ```{r}
-get_map <- function(df, levels_label) {
+get_inverted_list <- function(channels, list) {
+  inverted_list <- channels[!channels %in% list]
+  return(inverted_list)
+}
+
+get_relevant_coords <- function(x, y, channels) {
+  x <- x[channels]
+  y <- y[channels]
+  return(data.frame(x = x, y = y))
+}
+
+get_map <- function(df, channels, nodiff_channels, levels_label) {
+  diff_coordinates <- get_relevant_coords(df$x, df$y, channels)
+  nodiff_coordinates <- get_relevant_coords(df$x, df$y, nodiff_channels)
+  
   ggplot() +
     geom_point(data = df, aes(x = x, y = y, 
                               size = 1/group1, 
@@ -92,15 +111,27 @@ get_map <- function(df, levels_label) {
                               colour = "#287D8EFF",
                               alpha = 0.5,
                               stroke = 0)) +
-    geom_point(data = df, aes(x = x, y = y, 
-                              size = 1,
+    geom_point(data = df, aes(x = 1000+x, y = y, 
+                              size = 1/nodiff_group1, 
+                              colour = "#B8DE29FF",
                               alpha = 0.5,
-                              stroke = 0)) + 
+                              stroke = 0)) +
+    geom_point(data = df, aes(x = 1000+x, y = y, 
+                              size = 1/nodiff_group2,
+                              colour = "#287D8EFF",
+                              alpha = 0.5,
+                              stroke = 0)) +
+    geom_point(data = diff_coordinates, aes(x = x, y = y,
+                                            size = 1,
+                                            alpha = 0.5,
+                                            stroke = 0)) +
+    geom_point(data = nodiff_coordinates, aes(x = 1000+x, y = y,
+                                              size = 1,
+                                              alpha = 0.5,
+                                              stroke = 0)) +
     scale_color_discrete(name = "Level", labels = levels_label) + 
     scale_size_continuous(name = "p", breaks = c(20, 100, 200), labels = c("0.05", "0.01", "0.005")) +
     guides(alpha = FALSE) +
-    ylim(0, 900) +
-    xlim(0, 900) +
     annotate("text", x=20, y=5, label= "L", alpha = 0.8) +
     annotate("text", x=880, y=5, label= "R", alpha = 0.8) +
     theme(axis.line=element_blank(),axis.text.x=element_blank(),
@@ -120,51 +151,66 @@ These maps depict the channels that show significantly different tracking betwee
 
 **Talker**
 
-```{r}
-# Identify channels that differentiate between same and different talker
+```{r fig.height=8, fig.width=16}
+# Identify channels that differentiate between same and different talker and channels that don't
 talker_channels <- get_sig_channels(level_differences, "talker")
+nodiff_talker_channels <- get_inverted_list(channels, talker_channels)
 
 # Get p-values for tracking within each level
-same_talker <- get_ps(levels, talker_channels, "same_talker", 500)
-different_talker <- get_ps(levels, talker_channels, "different_talker", 500)
+same_talker <- get_ps(levels, talker_channels, "same_talker", permutations)
+different_talker <- get_ps(levels, talker_channels, "different_talker", permutations)
+nodiff_same_talker <- get_ps(levels, nodiff_talker_channels, "same_talker", permutations)
+nodiff_different_talker <- get_ps(levels, nodiff_talker_channels, "different_talker", permutations)
 
-# Create data frame for plotting
-talker_df <- data.frame(group1 = same_talker, group2 = different_talker, coordinates)
+# Create data frame for bubbles
+talker_df <- data.frame(group1 = same_talker, group2 = different_talker, nodiff_group1 = nodiff_same_talker, nodiff_group2 = nodiff_different_talker, coordinates)
 
 # Plot
-get_map(talker_df, c("Same talker", "Different talker"))
+plot <- get_map(talker_df, talker_channels, nodiff_talker_channels, c("Same talker", "Different talker"))
+plot
+# ggsave(plot = plot, filename = 'figs/talker.png', width = 12, height = 6)
 ```
 
 **Meaning**
 
-```{r}
+```{r fig.height=8, fig.width=16}
 # Identify channels that differentiate between meaningful and nonsense
 meaning_channels <- get_sig_channels(level_differences, "meaning")
+nodiff_meaning_channels <- get_inverted_list(channels, meaning_channels)
 
 # Get p-values for tracking within each level
-meaningful <- get_ps(levels, meaning_channels, "meaningful", 500)
-nonsense <- get_ps(levels, meaning_channels, "nonsense", 500)
+meaningful <- get_ps(levels, meaning_channels, "meaningful", permutations)
+nonsense <- get_ps(levels, meaning_channels, "nonsense", permutations)
+nodiff_meaningful <- get_ps(levels, nodiff_meaning_channels, "meaningful", permutations)
+nodiff_nonsense <- get_ps(levels, nodiff_meaning_channels, "nonsense", permutations)
 
 # Create data frame for plotting
-meaning_df <- data.frame(group1 = meaningful, group2 = nonsense, coordinates)
+meaning_df <- data.frame(group1 = meaningful, group2 = nonsense, nodiff_group1 = nodiff_meaningful, nodiff_group2 = nodiff_nonsense, coordinates)
 
 # Plot
-get_map(meaning_df, c("Meaningful", "Nonsense"))
+plot <- get_map(meaning_df, meaning_channels, nodiff_meaning_channels, c("Meaningful", "Nonsense"))
+plot
+# ggsave(plot = plot, filename = 'figs/meaning.png', width = 12, height = 6)
 ```
 
 **Constraint**
 
-```{r}
+```{r fig.height=8, fig.width=16}
 # Identify channels that differentiate between low and high constraint
 constraint_channels <- get_sig_channels(level_differences, "constraint")
+nodiff_constraint_channels <- get_inverted_list(channels, constraint_channels)
 
 # Get p-values for tracking within each level
-low_constraint <- get_ps(levels, constraint_channels, "low_constraint", 500)
-high_constraint <- get_ps(levels, constraint_channels, "high_constraint", 500)
+low_constraint <- get_ps(levels, constraint_channels, "low_constraint", permutations)
+high_constraint <- get_ps(levels, constraint_channels, "high_constraint", permutations)
+nodiff_low <- get_ps(levels, nodiff_constraint_channels, "low_constraint", permutations)
+nodiff_high <- get_ps(levels, nodiff_constraint_channels, "high_constraint", permutations)
 
-# Create data frame for plotting
-constraint_df <- data.frame(group1 = low_constraint, group2 = high_constraint, coordinates)
+# Create data frame for bubbles
+constraint_df <- data.frame(group1 = low_constraint, group2 = high_constraint, nodiff_group1 = nodiff_low, nodiff_group2 = nodiff_high, coordinates)
 
 # Plot
-get_map(constraint_df, c("Low constraint", "High constraint"))
+plot <- get_map(constraint_df, constraint_channels, nodiff_constraint_channels, c("Low constraint", "High constraint"))
+plot
+# ggsave(plot = plot, filename = 'figs/constraint.png', width = 12, height = 6)
 ```
